--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="row">
 
       <div class="image">
-        <img draggable="false" class="tilt" src="./assests/images/b.jpg" alt="">
+        <img draggable="false" class="tilt" src="./assests/images/yash.jpg" alt="">
       </div>
       <div class="content">
         <h3>Hello ! I'm Yash</h3>
