--- a/index.html
+++ b/index.html
@@ -149,9 +149,26 @@
             <div class="info">
               <i class="fa-brands fa-php"></i>
                 <span>PHP </span></i>
-              <span>90%</span>
+              <span>84%</span>
             </div>
-            <div class="line css"></div>
+            <div class="line php"></div>
+          </div>
+          
+          <div class="bar">
+            <div class="info">
+              <i class="fa-solid fa-database"></i>
+                <span>MYSQL </span></i>
+              <span>97%</span>
+            </div>
+            <div class="line mysql"></div>
+          </div>
+          <div class="bar">
+            <div class="info">
+              <i class="fa-brands fa-android"></i>
+                <span>Android </span></i>
+              <span>97%</span>
+            </div>
+            <div class="line android"></div>
           </div>
 
           <div class="bar">
@@ -171,16 +188,16 @@
             </div>
             <div class="line jquery"></div>
           </div>
-          <!--
+
           <div class="bar">
             <div class="info">
-         
-                <i class="fab fa-react">
+              <i class="fa-brands fa-react"></i>
                 <span>React JS</span></i>
-              <span>55%</span>
+              <span>75%</span>
             </div>
             <div class="line reactjs"></div>
-          </div>-->
+          </div>
+
         </div>
 
         <div class="col">
@@ -210,14 +227,6 @@
             </div>
             <div class="line nodejs"></div>
           </div>
-          <div class="bar">
-            <div class="info">
-              <i class="fa-brands fa-react"></i>
-                <span>ReactJS</span></i>
-              <span>780%</span>
-            </div>
-            <div class="line reactjs"></div>
-          </div>
 
           <div class="bar">
             <div class="info">
@@ -227,7 +236,7 @@
             </div>
             <div class="line vcs"></div>
           </div>
-          <!--
+
           <div class="bar">
             <div class="info">
               <i class="fab fa-wordpress-simple">
@@ -235,8 +244,7 @@
               <span>96%</span>
             </div>
             <div class="line cms"></div>
-          </div>-->
-
+          </div>
 
         </div>
       </div>
@@ -270,7 +278,7 @@
           <img draggable="false" src="./assests/images/educat/crystal.jpg" alt="">
         </div>
         <div class="content">
-          <h3>D.M. Vidyalay , Powai mumbai - 400076 </h3>
+          <h3>D.M. Vidyalay , Mumbai - 400076 </h3>
           <p>SSC </p>
           <h4>2018-2020 | Completed</h4>
         </div>
