--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="line css"></div>
           </div>
-          
+          /*
           <div class="bar">
             <div class="info">
               <i class="fa-brands fa-php"></i>
@@ -162,7 +162,7 @@
             </div>
             <div class="line mysql"></div>
           </div>
-          
+          */
           <div class="bar">
             <div class="info">
               <i class="fab fa-js-square">
@@ -193,7 +193,7 @@
               <span>88%</span>
             </div>
             <div class="line java"></div>
-          </div>
+          </div>/*
           <div class="bar">
             <div class="info">
               <i class="fa-brands fa-react"></i>
@@ -209,7 +209,7 @@
               <span>67%</span>
             </div>
             <div class="line android"></div>
-          </div>
+          </div>*/
 
 
           <div class="bar">
