--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="line css"></div>
           </div>
-          /*
+         <!--
           <div class="bar">
             <div class="info">
               <i class="fa-brands fa-php"></i>
@@ -161,8 +161,7 @@
               <span>97%</span>
             </div>
             <div class="line mysql"></div>
-          </div>
-          */
+          </div> -->
           <div class="bar">
             <div class="info">
               <i class="fab fa-js-square">
@@ -193,7 +192,7 @@
               <span>88%</span>
             </div>
             <div class="line java"></div>
-          </div>/*
+          </div><!--
           <div class="bar">
             <div class="info">
               <i class="fa-brands fa-react"></i>
@@ -209,7 +208,7 @@
               <span>67%</span>
             </div>
             <div class="line android"></div>
-          </div>*/
+          </div>-->
 
 
           <div class="bar">
