--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="content">
           <h3>Shri Bhagubhai Maftalal Polytechnic , Andheri </h3>
           <p> Diploma In Information Technology </p>
-          <h4>2021-2024 | Pursuing</h4>
+          <h4>2021-2024 | Completed </h4>
         </div>
       </div>
 
@@ -304,7 +304,7 @@
           <div class="desc">
             <a href="https://mesh-digital-services.netlify.app/" target="_blank" style="color: black;">
             <h3>Mesh.Digital.Services </h3>
-            <p>March 2024 - Present || Startup Company in Digital Services.</p>
+            <p>March 2024 - June 2024 || Startup Company in Digital Services.</p>
           </a>
           </div>
         </div>
