--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="image-box">
           <img draggable="false" src="./assests/images/contact.png" alt="">
         </div>
-        <form action="https://formspree.io/f/xjvdqyev" method="post">
+        <form action="https://formspree.io/f/xrbzdayq" method="post">
 
           <div class="form-group">
             <div class="field">
