--- a/index.html
+++ b/index.html
@@ -92,12 +92,21 @@
       <div class="image">
         <img draggable="false" class="tilt" src="./assests/images/yash.jpg" alt="">
       </div>
-      <div class="content">
+      <div class="content" style="text-align: justify;">
         <h3>Hello ! I'm Yash</h3>
-        <!--<span class="tag">Passionate Web Developer</span> -->
+      
         <p>
-          I am an industrious college student pursuing a diploma in Information Technology at <b>Shri Bhagubhai Maftalal Polytechnic.</b> Alongside my studies,<br> I am an enthusiastic freelancer with a strong passion for technology, having successfully designed and developed responsive and interactive websites over the course of 1.5 years. I also possess a keen interest in business and investments, demonstrating my quick learning abilities and determination to excel. </p>
-
+          I am an industrious college student currently pursuing a <b>BE in Information Technology</b> at 
+          <b>Padmabhushan Vasantdada Patil Pratishthan's College of Engineering</b> under 
+          <b>Mumbai University</b> (since <b>August 2024</b>). I completed my <b>Diploma in Information Technology</b> at 
+          <b>Shri Bhagubhai Mafatlal Polytechnic</b>, Mumbai, in <b>May 2024</b>, graduating with a <b>GPA of 8.65</b> 
+          (percentage: <b>86.13%</b>).
+        </p>
+        <p>
+          Alongside my studies, I am an enthusiastic freelancer with a strong passion for technology. I have successfully 
+          designed and developed responsive and interactive websites over the course of <b>1.5 years</b>. I also possess a keen 
+          interest in business and investments, demonstrating my quick learning abilities and determination to excel.
+        </p>
         <div class="box-container">
           <div class="box">
 
@@ -267,6 +276,17 @@
 
       <div class="box">
         <div class="image">
+          <img draggable="false" src="./assests/images/educat/mu.jpg" alt="">
+        </div>
+        <div class="content">
+          <h3> University of Mumbai </h3>
+          <p> B.E. In Information Technology </p>
+          <h4>2024 | Pursuing </h4>
+        </div>
+      </div>
+
+      <div class="box">
+        <div class="image">
           <img draggable="false" src="./assests/images/educat/gsfcu.jpg" alt="">
         </div>
         <div class="content">
@@ -297,6 +317,20 @@
     <h2 class="heading"><i class="fas fa-briefcase"></i> Experience & Courses</h2>
 
     <div class="timeline">
+
+      <div class="container right">
+        <div class="content">
+          <div class="tag">
+            <h2>Next JS WebDeveloper And SEO Manager </h2>
+          </div>
+          <div class="desc">
+            <a href="" target="_blank" style="color: black;">
+            <h3>businessCenters AE(Dubai) </h3>
+            <p>Oct 2024 - Pursuing || A <b>Dubai</b> based company which provides their spaces to other business and companies</p>
+          </a>
+          </div>
+        </div>
+      </div>
 
       <div class="container left">
         <div class="content">
