--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </p>
         <p>
           Alongside my studies, I am an enthusiastic freelancer with a strong passion for technology. I have successfully 
-          designed and developed responsive and interactive websites over the course of <b>1.5 years</b>. I also possess a keen 
+          designed and developed responsive and interactive websites over the course of <b>4 years</b>. I also possess a keen 
           interest in business and investments, demonstrating my quick learning abilities and determination to excel.
         </p>
         <div class="box-container">
@@ -163,16 +163,17 @@
               <span>84%</span>
             </div>
             <div class="line php"></div>
-          </div>
+          </div> -->
           
           <div class="bar">
             <div class="info">
-              <i class="fa-solid fa-database"></i>
-                <span>MYSQL </span></i>
+              <i class=""></i>
+                <span>React JS</span></i>
               <span>97%</span>
             </div>
             <div class="line mysql"></div>
-          </div> -->
+          </div> 
+
           <div class="bar">
             <div class="info">
               <i class="fab fa-js-square">
