--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <!-- Favicon -->
   <link id='favicon' rel="shortcut icon" href="./assests/images/favicon.jpg" type="image/x-png">
   <title>Yash Avsarmal</title>
@@ -167,7 +168,7 @@
           
           <div class="bar">
             <div class="info">
-              <i class=""></i>
+              <i class="fa-brands fa-react">
                 <span>React JS</span></i>
               <span>97%</span>
             </div>
